Running examples as part of plugin functional tests